# compiled-swagger.yaml
@@ -3894,6 +3894,47 @@ paths:
                             http://localhost:3000/docs/get-document/5db172d9b6de702a6d2b4d7b
         '400':
           $ref: '#/definitions/ErrorResponse/BadRequest'
+  '/docs/{docId}/suggest/tags':
+    post:
+      security:
+        - token: []
+      summary: suggest tags for a shared document
+      tags:
+        - RESOURCES
+      parameters:
+        - in: path
+          name: docId
+          schema:
+            type: string
+          required: true
+          description: DocumentId
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                tags:
+                  type: array
+                  items:
+                    type: string
+                  example:
+                    - Abc
+                    - Xyz
+      responses:
+        '200':
+          description: success
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  success:
+                    type: boolean
+                    example: true
+        '400':
+          $ref: '#/definitions/ErrorResponse/BadRequest'
   /template/create:
     post:
       '400':
